<?xml version="1.0"?>
<package format="2">
  <name>chomp_planner</name>
  <version>0.0.0</version>
  <description>The chomp obstacle avoidance planner package</description>

  <maintainer email="takahiro.miki1992@gmail.com">Takahiro Miki</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>voxblox</depend>
  <depend>voxblox_ros</depend>
  <depend>voxblox_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nodelet</depend>
  <!-- <depend>trajectory_msgs</depend> -->

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>

</package>
